--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div>
                 <ul>
                     <li><a href="" class="active-link">Home</a></li>
-                    <li><a href="">Destinations</a></li>
+                    <li><a href="destinations.html">Destinations</a></li>
                     <li><a href="">Contact Us</a></li>
                     <li><a href="">About Us</a></li>
                 </ul>
