--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div class="button-nav">
-                <button class="signup-button">SignUp</button>
+                <a href="singup.html"><button class="signup-button">SignUp</button></a>
                 <button class="login-button">LogIn</button>
             </div>
         </nav>
@@ -108,7 +108,7 @@
         <div class="grid-destinations">
             <div class="container-destination">
                 <div>
-                    <img src="assets/destination-1.png" alt="">
+                    <img src="assets/Beach.png" alt="">
                 </div>
                 <div class="container-destination-information">
                     <div class="container-destination-details">
@@ -129,12 +129,12 @@
             </div>
             <div class="container-destination">
                 <div>
-                    <img src="assets/destination-1.png" alt="">
+                    <img src="assets/Waterfall.png" alt="">
                 </div>
                 <div class="container-destination-information">
                     <div class="container-destination-details">
                         <p class="destination-name">
-                            Beach
+                            Waterfall
                         </p>
                         <button class="button-link">
                             <a href=""><img src="assets/Icon wrap.svg" alt=""></a>
@@ -142,7 +142,7 @@
                     </div>
                     <div>
                         <p class="destination-information">
-                            Explore the available beach in Jepara.
+                            Explore the available waterfall in Jepara.
                         </p>
                     </div>
                 </div>
@@ -150,12 +150,12 @@
             </div>
             <div class="container-destination">
                 <div>
-                    <img src="assets/destination-1.png" alt="">
+                    <img src="assets/Hill.png" alt="">
                 </div>
                 <div class="container-destination-information">
                     <div class="container-destination-details">
                         <p class="destination-name">
-                            Beach
+                            Hill
                         </p>
                         <button class="button-link">
                             <a href=""><img src="assets/Icon wrap.svg" alt=""></a>
@@ -163,7 +163,7 @@
                     </div>
                     <div>
                         <p class="destination-information">
-                            Explore the available beach in Jepara.
+                            Explore the available hill in Jepara.
                         </p>
                     </div>
                 </div>
