--- a/destinations.html
+++ b/destinations.html
@@ -19,7 +19,7 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="" class="active-link">Destinations</a></li>
                     <li><a href="">Contact Us</a></li>
                     <li><a href="">About Us</a></li>
