--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="" class="active-link">Home</a></li>
                     <li><a href="destinations.html">Destinations</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="">About Us</a></li>
                 </ul>
             </div>
