--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="container-signup">
                         <p class="account">Don't have an account?</p>
-                        <a href="#">Login</a>
+                        <a href="singup.html">Sign Up</a>
                     </div>
                 </form>
             </div>
