--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="button-nav">
                 <a href="singup.html"><button class="signup-button">SignUp</button></a>
-                <button class="login-button">LogIn</button>
+                <a href="login.html"><button class="login-button">LogIn</button></a>
             </div>
         </nav>
     </header>
